# YoloCut

./: CMakeLists.txt  Dockerfile  Makefile  ObjectDetector.cpp  ObjectDetector.h  README.md  VideoCutter.cpp  VideoCutter.h  filter.py  get_yolo.sh  joiner.sh  main.cpp  pipeline.sh  splitter.sh
detector/: CMakeLists.txt  Config.h  CsvOutput.cpp  CsvOutput.h  DetectedObjects.h  JsonOutput.cpp  JsonOutput.h  YoloDetector.cpp  YoloDetector.h  main.cpp
include/: FfmpegVideoCutter.h  ObjectDetector.h  VideoCutter.h  YoloCut.h  YoloDetector.h
joiner/: joiner.sh
src/: FfmpegVideoCutter.cpp  YoloCut.cpp  YoloDetector.cpp  main.cpp
